--- a/.github/workflows/opensuse-mingw.yml
+++ b/.github/workflows/opensuse-mingw.yml
@@ -27,23 +27,19 @@ jobs:
         files: |
           docker/opensuse-mingw
         
-    - name: Docker file push
-      id: docker_push
-      uses: elgohr/Publish-Docker-Github-Action@master
-      with:
-        name: jmkerloch/openfoam-opensuse-mingw
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        workdir: docker
-        dockerfile: opensuse-mingw
-        cache: true
-        tags: opensuse-mingw
+    - name: Push to GitHub Packages
+        uses: docker/build-push-action@v1
+        with:
+          registry: ghcr.io
+          repository: pmf/opensuse-mingw
+          tags: latest
+          dockerfile: docker/opensuse-mingw
 
   build:
 
     runs-on: ubuntu-latest
     needs: docker_publish
-    container: 'jmkerloch/openfoam-opensuse-mingw'
+    container: 'pmf/opensuse-mingw'
 
     steps:
     
@@ -53,7 +49,7 @@ jobs:
       run: |
           git clone $GITHUB_SERVER_URL/$GITHUB_REPOSITORY.git -b ${BRANCH_NAME} .
           
-    - name: Configure
+    - name: Build
       run: |
            source /etc-mingw/prefs.sh
            ./Allwmake -j
