--- a/.github/workflows/opensuse-mingw.yml
+++ b/.github/workflows/opensuse-mingw.yml
@@ -30,16 +30,14 @@ jobs:
     - name: Push to GitHub Packages
       uses: docker/build-push-action@v1
       with:
-        registry: ghcr.io
-        repository: jmkerloch/openfoam-opensuse-mingw
-        tags: latest
+        tags: openfoam-opensuse-mingw
         dockerfile: docker/opensuse-mingw
 
   build:
 
     runs-on: ubuntu-latest
     needs: docker_publish
-    container: 'jmkerloch/openfoam-opensuse-mingw'
+    container: 'ghcr.io/jmkerloch/openfoam-opensuse-mingw'
 
     steps:
     
