--- a/.github/workflows/opensuse-mingw.yml
+++ b/.github/workflows/opensuse-mingw.yml
@@ -26,6 +26,13 @@ jobs:
       with:
         files: |
           docker/opensuse-mingw
+          
+    - name: Log in to the Container registry
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
         
     - name: Push to GitHub Packages
       uses: docker/build-push-action@v1
