debug docker image content

--- a/.github/workflows/opensuse-mingw.yml
+++ b/.github/workflows/opensuse-mingw.yml
@@ -59,6 +59,8 @@ jobs:
           
     - name: Build
       run: |
+           pwd
+	   ls -l
            source /etc-mingw/prefs.sh
            ./Allwmake -j
 
