correction of env set

--- a/.github/workflows/opensuse-mingw.yml
+++ b/.github/workflows/opensuse-mingw.yml
@@ -59,7 +59,5 @@ jobs:
           
     - name: Build
       run: |
-           pwd
-           ls -l
-           source /etc-mingw/prefs.sh
+           source etc-mingw/prefs.sh
            ./Allwmake -j
