--- a/.github/workflows/opensuse-mingw.yml
+++ b/.github/workflows/opensuse-mingw.yml
@@ -59,5 +59,5 @@ jobs:
           
     - name: Build
       run: |
-           source etc-mingw/prefs.sh
+           source /openfoam/etc/bashrc etc-mingw/prefs.sh
            ./Allwmake -j
