--- a/.github/workflows/opensuse-mingw.yml
+++ b/.github/workflows/opensuse-mingw.yml
@@ -28,6 +28,7 @@ jobs:
           docker/opensuse-mingw
           
     - name: Log in to the Container registry
+      if: steps.changed-files.outputs.modified_files != ''
       uses: docker/login-action@v1
       with:
         registry: ghcr.io
@@ -35,6 +36,7 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
         
     - name: Push to GitHub Packages
+      if: steps.changed-files.outputs.modified_files != ''
       uses: docker/build-push-action@v1
       with:
         registry: ghcr.io
