--- a/.github/workflows/opensuse-mingw.yml
+++ b/.github/workflows/opensuse-mingw.yml
@@ -65,4 +65,4 @@ jobs:
            pwd
            ls /openfoam
            source /openfoam/etc/bashrc etc-mingw/prefs.sh
-           ./Allwmake -j
+           Allwmake -j
