add debug for openfoam env variable

--- a/.github/workflows/opensuse-mingw.yml
+++ b/.github/workflows/opensuse-mingw.yml
@@ -65,4 +65,5 @@ jobs:
            pwd
            ls /openfoam
            source /openfoam/etc/bashrc etc-mingw/prefs.sh
-           Allwmake -j
+           echo $FOAM_SETTINGS
+           ./Allwmake -j
