add debug for openfoam env variable

--- a/.github/workflows/opensuse-mingw.yml
+++ b/.github/workflows/opensuse-mingw.yml
@@ -61,9 +61,9 @@ jobs:
           
     - name: Build
       run: |
+           FOAM_VERBOSE=true source /openfoam/etc/bashrc etc-mingw/prefs.sh
            ls
            pwd
            ls /openfoam
-           source /openfoam/etc/bashrc etc-mingw/prefs.sh
            echo $FOAM_SETTINGS
            ./Allwmake -j
