source in 2 steps

--- a/.github/workflows/opensuse-mingw.yml
+++ b/.github/workflows/opensuse-mingw.yml
@@ -61,7 +61,8 @@ jobs:
           
     - name: Build
       run: |
-           FOAM_VERBOSE=true source /openfoam/etc/bashrc etc-mingw/prefs.sh
+           FOAM_VERBOSE=true source /openfoam/etc/bashrc 
+           source etc-mingw/prefs.sh
            ls
            pwd
            ls /openfoam
