--- a/.github/workflows/opensuse-mingw.yml
+++ b/.github/workflows/opensuse-mingw.yml
@@ -60,10 +60,12 @@ jobs:
           git clone $GITHUB_SERVER_URL/$GITHUB_REPOSITORY.git -b ${BRANCH_NAME} .
           
     - name: Build
-      run: |
-           FOAM_VERBOSE=true 
+      run: |           
            source etc-mingw/prefs.sh
-           source /openfoam/etc/bashrc           
+           echo $FOAM_CONFIG_ETC
+           echo $WM_COMPILER
+           echo $WM_MPLIB
+           FOAM_VERBOSE=true  source /openfoam/etc/bashrc           
            ls
            pwd
            ls /openfoam
