correction artifact upload
gitlab method previously used

--- a/.github/workflows/opensuse-mingw.yml
+++ b/.github/workflows/opensuse-mingw.yml
@@ -61,8 +61,10 @@ jobs:
           
     - name: Build
       run: |    
-           FOAM_VERBOSE=true &&  source /openfoam/etc/bashrc /openfoam/etc-mingw/prefs.sh && ls && ./Allwmake -j      
-      shell: sh      
-      artifacts:
-        paths:
-          - /root/OpenFOAM/-v2106/platforms/linux64MingwDPInt32Opt/
+           FOAM_VERBOSE=true &&  source /openfoam/etc/bashrc /openfoam/etc-mingw/prefs.sh && ls && ./Allwmake -j
+      
+    - name: Build artifact upload
+      uses: actions/upload-artifact@v2
+      with:
+        name: pmf-opensuse-mingw
+        path: /root/OpenFOAM/-v2106/platforms/linux64MingwDPInt32Opt/
