invalid docker/build-push-action@v1 build-args command

--- a/.github/workflows/opensuse-mingw.yml
+++ b/.github/workflows/opensuse-mingw.yml
@@ -44,7 +44,7 @@ jobs:
         dockerfile: docker/opensuse-mingw
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-        build-args: OPENFOAM_BRANCH=maintenance-v2106
+        build_args: OPENFOAM_BRANCH=maintenance-v2106
 
   build:
 
