--- a/.github/workflows/opensuse-mingw.yml
+++ b/.github/workflows/opensuse-mingw.yml
@@ -13,6 +13,15 @@ jobs:
   docker_publish:
           
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        openfoam_version: [ v2106, v2112 ]
+        include:
+          - openfoam_version: v2106
+            openfoam_branch: maintenance-v2106
+          - openfoam_version: v2112
+            openfoam_branch: OpenFOAM-v2112
     
     steps:
     
@@ -35,38 +44,42 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
         
-    - name: Push to GitHub Packages
-      if: steps.changed-files.outputs.modified_files != ''
+    - name: Push to GitHub Packages ${{matrix.openfoam_version}}
       uses: docker/build-push-action@v1
       with:
         registry: ghcr.io
-        tags: openfoam-v2106-opensuse-mingw
+        tags: openfoam-${{matrix.openfoam_version}}-opensuse-mingw
         dockerfile: docker/opensuse-mingw
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-        build_args: OPENFOAM_BRANCH=maintenance-v2106
+        build_args: OPENFOAM_BRANCH=${{matrix.openfoam_branch}}
 
   build:
 
     runs-on: ubuntu-latest
     needs: docker_publish
-    container: 'ghcr.io/${{github.actor}}/porousmultiphasefoam:openfoam-v2106-opensuse-mingw'
+
+    strategy:
+      matrix:
+        openfoam_version: [ v2106, v2112 ]
+
+    container: 'ghcr.io/${{github.actor}}/porousmultiphasefoam:openfoam-${{matrix.openfoam_version}}-opensuse-mingw'
 
     steps:
-    
+
     - uses: nelonoel/branch-name@v1.0.1
-    
+
     - name: Checkout
       run: |
           git clone $GITHUB_SERVER_URL/$GITHUB_REPOSITORY.git -b ${BRANCH_NAME} .
-          
+
     - name: Build
-      run: |    
+      run: |
            FOAM_VERBOSE=true &&  source /openfoam/etc/bashrc /openfoam/etc-mingw/prefs.sh && ls && ./Allwmake -j
-      
+
     - name: Build artifact upload
       uses: actions/upload-artifact@v2
       with:
-        name: pmf-opensuse-mingw
-        path: /github/home/OpenFOAM/-v2106/platforms/linux64MingwDPInt32Opt/
+        name: pmf-opensuse-mingw-${{matrix.openfoam_version}}
+        path: /github/home/OpenFOAM/-${{matrix.openfoam_version}}/platforms/linux64MingwDPInt32Opt/
         
