--- a/.github/workflows/opensuse-mingw.yml
+++ b/.github/workflows/opensuse-mingw.yml
@@ -45,6 +45,7 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
         
     - name: Push to GitHub Packages ${{matrix.openfoam_version}}
+      if: steps.changed-files.outputs.modified_files != ''
       uses: docker/build-push-action@v1
       with:
         registry: ghcr.io
