--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,4 +13,8 @@ build:
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
-   configuration: docs/conf.py
+   configuration: doc/conf.py
+   
+python:
+   install:
+   - requirements: doc/requirements.txt
